--- a/Emacs.org
+++ b/Emacs.org
@@ -194,6 +194,13 @@ We have a good deal of flexibility as to where we actually define bindings:
     ;; Git
     "g"  '(:ignore t :which-key "Git")
     "gs" '(magit-status :which-key "magit status")
+    ;; Project
+    "p"  '(:ignore t :which-key "Project")
+    "pc" '(projectile-compile-project :which-key "Compile project")
+    "pf" '(projectile-find-file :which-key "Find file")
+    "pk" '(projectile-kill-buffers :which-key "Kill all project buffers")
+    "pp" '(projectile-switch-project :which-key "Switch project")
+    "pr" '(projectile-recentf :which-key "Open recent file")
     ;; Windows
     "w"  '(:ignore t :which-key "Windows")
     "wc" '(evil-window-delete :which-key "Close window")
@@ -758,6 +765,27 @@ See [[https://orgmode.org/manual/Structure-Templates.html][Structure Templates]]
 #+end_src
 
 * Development
+
+** Project Management with Projectile
+
+[[https://projectile.mx/][Projectile]] is a project-interaction library, providing a number of features for easy project management and navigation. To get the most out of it, make sure you have =fd= and =ripgrep= installed on your system. You might also wish to install the [[https://github.com/dajva/rg.el][rg.el]] package.
+
+As an alternative to Projectile, =project.el= is a relatively new built-in package that might be worth trying at some point.
+
+#+begin_src emacs-lisp
+
+  (use-package projectile
+    :diminish projectile-mode
+    :config (projectile-mode)
+    :bind-keymap
+    ("C-c p" . projectile-command-map)
+    :init
+    ;; Set this to the folder where you keep your Git repos
+    (when (file-directory-p "~/Development")
+      (setq projectile-project-search-path '("~/Development")))
+    (setq projectile-switch-project-action #'projectile-dired))
+
+#+end_src
 
 ** Languages
 
