--- a/doom/.doom.d/config.org
+++ b/doom/.doom.d/config.org
@@ -117,11 +117,79 @@ Set reasonable default settings for indentation: indent by 2 spaces, and use spa
 
 ** Which-Key
 
+Paging in =which-key= popups does not work with the =completion/vertico= module, because which-key's paging prefix, =C-h=, is shadowed by =embark-prefix-help-command=. This isn't technically a problem, because the Embark command provides the same functionality. This issue is described [[https://github.com/hlissner/doom-emacs/issues/5564][here]], along with a very nice [[https://github.com/hlissner/doom-emacs/issues/5564#issuecomment-975124022][solution]], the result of which is that
+- when no which-key popup is active, =C-h= invokes =prefix-help-command=;
+- when a which-key popup is visible, =C-h= invokes which-key paging and =C-h h= invokes =prefix-help-command=.
+
+#+begin_src elisp
+  (setq which-key-use-C-h-commands t
+        prefix-help-command #'which-key-C-h-dispatch)
+
+  ;; A hook is needed because which-key-mode sets
+  ;; `which-key--prefix-help-cmd-backup' when `which-key-mode' is enabled.
+  (add-hook 'which-key-mode-hook 'set-which-key--prefix-help-cmd-backup)
+
+  (defun set-which-key--prefix-help-cmd-backup ()
+    (setq which-key--prefix-help-cmd-backup 'my/embark-prefix-help-command))
+
+  (defun my/embark-prefix-help-command (popup-showing)
+    "Prompt for and run a command bound in the prefix used to reach this command.
+  This command is intended to be used as the value of
+  `which-key--prefix-help-cmd-backup' when `prefix-help-command' is set to
+  `which-key-C-h-dispatch' and `which-key-use-C-h-commands' is set to `t'. When
+  the which-key-popup is not visible, `which-key-C-h-dispatch' calls
+  `which-key-show-standard-help', which calls `which-key--prefix-help-cmd-backup',
+  which by default is set to the original value of `prefix-help-command' when
+  `which-key-mode' is first enabled. In Doom Emacs with `vertico',
+  `prefix-help-command' is typically the original `embark-prefix-help-command'
+  that this function replaces. Note that this function must be called from a
+  modified version of `which-key-show-standard-help' that passes `popup-showing'.
+
+  In addition to using completion to select a command, you can also type @ and the
+  key binding (without the prefix)."
+    (interactive)
+    (let (keys)
+      (if popup-showing
+          (setq keys (which-key--current-prefix))
+        (setq keys (this-command-keys-vector))
+        (setq keys (seq-take keys (1- (length keys)))))
+      (embark-bindings keys)))
+
+  (advice-add 'which-key-show-standard-help
+              :override 'my/which-key-show-standard-help)
+
+  (defun my/which-key-show-standard-help (&optional _)
+    "Call the command in `which-key--prefix-help-cmd-backup'.
+  Usually this is `describe-prefix-bindings'.
+
+  Unlike the original function, `popup-showing' is passed to
+  `which-key--prefix-help-cmd-backup'."
+    (interactive)
+    (let ((which-key-inhibit t)
+          (popup-showing (which-key--popup-showing-p)))
+      (which-key--hide-popup-ignore-command)
+      (cond ((and (eq which-key--prefix-help-cmd-backup
+                      'describe-prefix-bindings)
+                  ;; If the popup is not showing, we call
+                  ;; `describe-prefix-bindings' directly.
+                  popup-showing)
+            ;; This is essentially what `describe-prefix-bindings' does. We can't
+            ;; use this function directly, because the prefix will not be correct
+            ;; when we enter using `which-key-C-h-dispatch'.
+            (describe-bindings (kbd (which-key--current-key-string))))
+            ((functionp which-key--prefix-help-cmd-backup)
+            (funcall which-key--prefix-help-cmd-backup popup-showing)))))
+#+end_src
+
+I quite like the solution above, but I'll also reduce the need for paging by increasing the maximum size of the which-key popup. I find paging in which-key annoying, and I don't particularly need to see the contents of the current buffer while searching for a command.
+
 #+begin_src elisp
   ;; Max height of which-key window, relative to frame's height.
   ;; Default value is 0.25; increase to minimize need for paging.
   (setq which-key-side-window-max-height 0.5)
 #+end_src
+
+/Note:/ A related issue is that neither which-key paging nor Embark help will be available if =C-h= is bound to another command under the current prefix, which is the case for =SPC w= and =C-w=. You might consider removing these bindings, as neither is particularly useful.
 
 * Keybindings
 
